# ManuvrPlatforms

./: .gitignore  README.md
.github/workflows/: c3p-linux.yml
ESP32/: CMakeLists.txt  ESP32.h  ESP32Storage.h  Makefile
ESP32/examples/WiFiCommTest/: CMakeLists.txt  README.md  activate.sh  downloadDeps.sh  sdkconfig
ESP32/examples/WiFiCommTest/main/: CMakeLists.txt  WiFiCommUnit.h  main.cpp
ESP32/src/: ConsoleUART.cpp  ESP32.cpp  ESP32Storage.cpp  I2CAdapter.cpp  MQTT.cpp  SPIAdapter.cpp  UART.cpp  WiFi.cpp
Linux/: C3PLinux.h  C3POnX11.h  Linux.h  LinuxStorage.h  Makefile  README.md  Unsupported.cpp
Linux/example/: Makefile  README.MD  main.cpp
Linux/example/BurritoConsole/: Makefile  main.cpp
Linux/example/ImageAPI/: Makefile  downloadDeps.sh
Linux/example/ImageAPI/src/: ImageAPI.cpp  ImageAPI.h  ImageAPI_support.cpp  X11Window.cpp
Linux/example/c3p-demo/: Makefile  downloadDeps.sh
Linux/example/c3p-demo/src/: blobstudy_x11_win.cpp  c3p-demo-win-main.cpp  c3p-demo.cpp  c3p-demo.h  c3p-demo_support.cpp
Linux/example/console/: Makefile  main.cpp
Linux/example/rhom/: Makefile  rhom.cpp
Linux/example/rhom/src/: RHoM.h  rhom.cpp  rhom_support.cpp
Linux/example/rhom/src/uApp/: C3POnX11.h  X11Window.cpp
Linux/src/: C3PLinuxFile.cpp  I2CAdapter.cpp  Linux.cpp  LinuxI2C.cpp  LinuxSockListener.cpp  LinuxSocketPipe.cpp  LinuxStdIO.cpp  LinuxStorage.cpp  LinuxUART.cpp  SPIAdapter.cpp
Linux/src/GUI/X11/: C3Px11Window.cpp
Linux/src/Raspi/: Raspi.cpp
ManuvrArduino/: LICENSE  README.md  keywords.txt  library.properties
ManuvrArduino/src/: ManuvrArduino.h
ManuvrArduino/src/Teensy3/: ConcretePlatform.cpp  I2CAdapter.cpp  SPIAdapter.cpp  TeensyStorage.cpp  TeensyStorage.h
ManuvrArduino/src/Teensy4/: ConcretePlatform.cpp  I2CAdapter.cpp  SPIAdapter.cpp  UART.cpp
